compiler/compilador.output
Terminals which are not used

   DIVISAO
   T_LABEL
   T_TYPE
   T_ARRAY
   T_OF
   T_FUNCTION
   T_GOTO


Grammar

    0 $accept: programa $end

    1 @1: /* empty */

    2 programa: @1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 @2: /* empty */

    4 @3: /* empty */

    5 bloco: @2 parte_declara_vars @3 parte_declara_subrotinas comando_composto

    6 tipo: INTEGER
    7     | BOOLEAN

    8 parte_declara_vars_aux: parte_declara_vars_aux PONTO_E_VIRGULA declara_vars
    9                       | VAR declara_vars

   10 parte_declara_vars: /* empty */
   11                   | parte_declara_vars_aux PONTO_E_VIRGULA

   12 @4: /* empty */

   13 declara_vars: @4 lista_idents DOIS_PONTOS tipo

   14 lista_idents: lista_idents VIRGULA IDENT
   15             | IDENT

   16 parte_declara_subrotinas: /* empty */
   17                         | parte_declara_subrotinas daclara_procedimento

   18 daclara_procedimento: T_PROCEDURE

   19 comando_composto_aux: comando_composto_aux comando PONTO_E_VIRGULA
   20                     | /* empty */

   21 comando_composto: T_BEGIN comando PONTO_E_VIRGULA comando_composto_aux T_END

   22 comando: atribuicao
   23        | leitura
   24        | escrita
   25        | comando_repetitivo
   26        | comando_condicional

   27 @5: /* empty */

   28 @6: /* empty */

   29 atribuicao: @5 variavel @6 ATRIBUICAO expressao

   30 leitura: READ ABRE_PARENTESES read_section FECHA_PARENTESES

   31 @7: /* empty */

   32 @8: /* empty */

   33 read_section: @7 variavel @8 read_section_lp

   34 read_section_lp: /* empty */
   35                | VIRGULA read_section

   36 @9: /* empty */

   37 escrita: WRITE @9 ABRE_PARENTESES expressao FECHA_PARENTESES

   38 comando_condicional_else: /* empty */
   39                         | T_ELSE comando_composto

   40 @10: /* empty */

   41 @11: /* empty */

   42 @12: /* empty */

   43 comando_condicional: @10 T_IF expressao T_THEN @11 comando_composto @12 comando_condicional_else

   44 @13: /* empty */

   45 @14: /* empty */

   46 comando_repetitivo: T_WHILE @13 expressao @14 T_DO comando_composto

   47 expressao: expressao_simples
   48          | expressao_simples relacao expressao_simples

   49 relacao: IGUAL
   50        | DIFERENTE
   51        | MENOR
   52        | MENOR_IGUAL
   53        | MAIOR_IGUAL
   54        | MAIOR

   55 mais_menos_epsilon: MAIS
   56                   | MENOS
   57                   | /* empty */

   58 mais_menos_or: MAIS
   59              | MENOS
   60              | T_OR

   61 expressao_simples: expressao_simples mais_menos_or termo
   62                  | mais_menos_epsilon termo

   63 mult_div_and: MULTIPLICACAO
   64             | T_DIV
   65             | T_AND

   66 termo: termo mult_div_and fator
   67      | fator

   68 fator: variavel
   69      | numero
   70      | TRUE
   71      | FALSE
   72      | ABRE_PARENTESES expressao FECHA_PARENTESES
   73      | T_NOT fator

   74 variavel: identificador

   75 numero: NUMERO

   76 identificador: IDENT


Terminals, with rules where they appear

$end (0) 0
error (256)
PROGRAM (258) 2
ABRE_PARENTESES (259) 2 30 37 72
FECHA_PARENTESES (260) 2 30 37 72
VIRGULA (261) 14 35
PONTO_E_VIRGULA (262) 2 8 11 19 21
DOIS_PONTOS (263) 13
PONTO (264) 2
INTEGER (265) 6
BOOLEAN (266) 7
T_BEGIN (267) 21
T_END (268) 21
VAR (269) 9
IDENT (270) 2 14 15 76
NUMERO (271) 75
ATRIBUICAO (272) 29
IGUAL (273) 49
DIFERENTE (274) 50
MAIOR (275) 54
MENOR (276) 51
MAIOR_IGUAL (277) 53
MENOR_IGUAL (278) 52
MAIS (279) 55 58
MENOS (280) 56 59
MULTIPLICACAO (281) 63
DIVISAO (282)
READ (283) 30
WRITE (284) 37
TRUE (285) 70
FALSE (286) 71
T_LABEL (287)
T_TYPE (288)
T_ARRAY (289)
T_OF (290)
T_PROCEDURE (291) 18
T_FUNCTION (292)
T_GOTO (293)
T_IF (294) 43
T_THEN (295) 43
T_ELSE (296) 39
T_WHILE (297) 46
T_DO (298) 46
T_OR (299) 60
T_DIV (300) 64
T_AND (301) 65
T_NOT (302) 73


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
programa (49)
    on left: 2, on right: 0
@1 (50)
    on left: 1, on right: 2
bloco (51)
    on left: 5, on right: 2
@2 (52)
    on left: 3, on right: 5
@3 (53)
    on left: 4, on right: 5
tipo (54)
    on left: 6 7, on right: 13
parte_declara_vars_aux (55)
    on left: 8 9, on right: 8 11
parte_declara_vars (56)
    on left: 10 11, on right: 5
declara_vars (57)
    on left: 13, on right: 8 9
@4 (58)
    on left: 12, on right: 13
lista_idents (59)
    on left: 14 15, on right: 2 13 14
parte_declara_subrotinas (60)
    on left: 16 17, on right: 5 17
daclara_procedimento (61)
    on left: 18, on right: 17
comando_composto_aux (62)
    on left: 19 20, on right: 19 21
comando_composto (63)
    on left: 21, on right: 5 39 43 46
comando (64)
    on left: 22 23 24 25 26, on right: 19 21
atribuicao (65)
    on left: 29, on right: 22
@5 (66)
    on left: 27, on right: 29
@6 (67)
    on left: 28, on right: 29
leitura (68)
    on left: 30, on right: 23
read_section (69)
    on left: 33, on right: 30 35
@7 (70)
    on left: 31, on right: 33
@8 (71)
    on left: 32, on right: 33
read_section_lp (72)
    on left: 34 35, on right: 33
escrita (73)
    on left: 37, on right: 24
@9 (74)
    on left: 36, on right: 37
comando_condicional_else (75)
    on left: 38 39, on right: 43
comando_condicional (76)
    on left: 43, on right: 26
@10 (77)
    on left: 40, on right: 43
@11 (78)
    on left: 41, on right: 43
@12 (79)
    on left: 42, on right: 43
comando_repetitivo (80)
    on left: 46, on right: 25
@13 (81)
    on left: 44, on right: 46
@14 (82)
    on left: 45, on right: 46
expressao (83)
    on left: 47 48, on right: 29 37 43 46 72
relacao (84)
    on left: 49 50 51 52 53 54, on right: 48
mais_menos_epsilon (85)
    on left: 55 56 57, on right: 62
mais_menos_or (86)
    on left: 58 59 60, on right: 61
expressao_simples (87)
    on left: 61 62, on right: 47 48 61
mult_div_and (88)
    on left: 63 64 65, on right: 66
termo (89)
    on left: 66 67, on right: 61 62 66
fator (90)
    on left: 68 69 70 71 72 73, on right: 66 67 73
variavel (91)
    on left: 74, on right: 29 33 68
numero (92)
    on left: 75, on right: 69
identificador (93)
    on left: 76, on right: 74


state 0

    0 $accept: . programa $end

    $default  reduce using rule 1 (@1)

    programa  go to state 1
    @1        go to state 2


state 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


state 2

    2 programa: @1 . PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


state 3

    0 $accept: programa $end .

    $default  accept


state 4

    2 programa: @1 PROGRAM . IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


state 5

    2 programa: @1 PROGRAM IDENT . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


state 6

    2 programa: @1 PROGRAM IDENT ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 7

    lista_idents  go to state 8


state 7

   15 lista_idents: IDENT .

    $default  reduce using rule 15 (lista_idents)


state 8

    2 programa: @1 PROGRAM IDENT ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   14 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 9
    VIRGULA           shift, and go to state 10


state 9

    2 programa: @1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 11


state 10

   14 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  shift, and go to state 12


state 11

    2 programa: @1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    $default  reduce using rule 3 (@2)

    bloco  go to state 13
    @2     go to state 14


state 12

   14 lista_idents: lista_idents VIRGULA IDENT .

    $default  reduce using rule 14 (lista_idents)


state 13

    2 programa: @1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  shift, and go to state 15


state 14

    5 bloco: @2 . parte_declara_vars @3 parte_declara_subrotinas comando_composto

    VAR  shift, and go to state 16

    $default  reduce using rule 10 (parte_declara_vars)

    parte_declara_vars_aux  go to state 17
    parte_declara_vars      go to state 18


state 15

    2 programa: @1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $default  reduce using rule 2 (programa)


state 16

    9 parte_declara_vars_aux: VAR . declara_vars

    $default  reduce using rule 12 (@4)

    declara_vars  go to state 19
    @4            go to state 20


state 17

    8 parte_declara_vars_aux: parte_declara_vars_aux . PONTO_E_VIRGULA declara_vars
   11 parte_declara_vars: parte_declara_vars_aux . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 21


state 18

    5 bloco: @2 parte_declara_vars . @3 parte_declara_subrotinas comando_composto

    $default  reduce using rule 4 (@3)

    @3  go to state 22


state 19

    9 parte_declara_vars_aux: VAR declara_vars .

    $default  reduce using rule 9 (parte_declara_vars_aux)


state 20

   13 declara_vars: @4 . lista_idents DOIS_PONTOS tipo

    IDENT  shift, and go to state 7

    lista_idents  go to state 23


state 21

    8 parte_declara_vars_aux: parte_declara_vars_aux PONTO_E_VIRGULA . declara_vars
   11 parte_declara_vars: parte_declara_vars_aux PONTO_E_VIRGULA .

    IDENT     reduce using rule 12 (@4)
    $default  reduce using rule 11 (parte_declara_vars)

    declara_vars  go to state 24
    @4            go to state 20


state 22

    5 bloco: @2 parte_declara_vars @3 . parte_declara_subrotinas comando_composto

    $default  reduce using rule 16 (parte_declara_subrotinas)

    parte_declara_subrotinas  go to state 25


state 23

   13 declara_vars: @4 lista_idents . DOIS_PONTOS tipo
   14 lista_idents: lista_idents . VIRGULA IDENT

    VIRGULA      shift, and go to state 10
    DOIS_PONTOS  shift, and go to state 26


state 24

    8 parte_declara_vars_aux: parte_declara_vars_aux PONTO_E_VIRGULA declara_vars .

    $default  reduce using rule 8 (parte_declara_vars_aux)


state 25

    5 bloco: @2 parte_declara_vars @3 parte_declara_subrotinas . comando_composto
   17 parte_declara_subrotinas: parte_declara_subrotinas . daclara_procedimento

    T_BEGIN      shift, and go to state 27
    T_PROCEDURE  shift, and go to state 28

    daclara_procedimento  go to state 29
    comando_composto      go to state 30


state 26

   13 declara_vars: @4 lista_idents DOIS_PONTOS . tipo

    INTEGER  shift, and go to state 31
    BOOLEAN  shift, and go to state 32

    tipo  go to state 33


state 27

   21 comando_composto: T_BEGIN . comando PONTO_E_VIRGULA comando_composto_aux T_END

    READ     shift, and go to state 34
    WRITE    shift, and go to state 35
    T_WHILE  shift, and go to state 36

    T_IF      reduce using rule 40 (@10)
    $default  reduce using rule 27 (@5)

    comando              go to state 37
    atribuicao           go to state 38
    @5                   go to state 39
    leitura              go to state 40
    escrita              go to state 41
    comando_condicional  go to state 42
    @10                  go to state 43
    comando_repetitivo   go to state 44


state 28

   18 daclara_procedimento: T_PROCEDURE .

    $default  reduce using rule 18 (daclara_procedimento)


state 29

   17 parte_declara_subrotinas: parte_declara_subrotinas daclara_procedimento .

    $default  reduce using rule 17 (parte_declara_subrotinas)


state 30

    5 bloco: @2 parte_declara_vars @3 parte_declara_subrotinas comando_composto .

    $default  reduce using rule 5 (bloco)


state 31

    6 tipo: INTEGER .

    $default  reduce using rule 6 (tipo)


state 32

    7 tipo: BOOLEAN .

    $default  reduce using rule 7 (tipo)


state 33

   13 declara_vars: @4 lista_idents DOIS_PONTOS tipo .

    $default  reduce using rule 13 (declara_vars)


state 34

   30 leitura: READ . ABRE_PARENTESES read_section FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 45


state 35

   37 escrita: WRITE . @9 ABRE_PARENTESES expressao FECHA_PARENTESES

    $default  reduce using rule 36 (@9)

    @9  go to state 46


state 36

   46 comando_repetitivo: T_WHILE . @13 expressao @14 T_DO comando_composto

    $default  reduce using rule 44 (@13)

    @13  go to state 47


state 37

   21 comando_composto: T_BEGIN comando . PONTO_E_VIRGULA comando_composto_aux T_END

    PONTO_E_VIRGULA  shift, and go to state 48


state 38

   22 comando: atribuicao .

    $default  reduce using rule 22 (comando)


state 39

   29 atribuicao: @5 . variavel @6 ATRIBUICAO expressao

    IDENT  shift, and go to state 49

    variavel       go to state 50
    identificador  go to state 51


state 40

   23 comando: leitura .

    $default  reduce using rule 23 (comando)


state 41

   24 comando: escrita .

    $default  reduce using rule 24 (comando)


state 42

   26 comando: comando_condicional .

    $default  reduce using rule 26 (comando)


state 43

   43 comando_condicional: @10 . T_IF expressao T_THEN @11 comando_composto @12 comando_condicional_else

    T_IF  shift, and go to state 52


state 44

   25 comando: comando_repetitivo .

    $default  reduce using rule 25 (comando)


state 45

   30 leitura: READ ABRE_PARENTESES . read_section FECHA_PARENTESES

    $default  reduce using rule 31 (@7)

    read_section  go to state 53
    @7            go to state 54


state 46

   37 escrita: WRITE @9 . ABRE_PARENTESES expressao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 55


state 47

   46 comando_repetitivo: T_WHILE @13 . expressao @14 T_DO comando_composto

    MAIS   shift, and go to state 56
    MENOS  shift, and go to state 57

    $default  reduce using rule 57 (mais_menos_epsilon)

    expressao           go to state 58
    mais_menos_epsilon  go to state 59
    expressao_simples   go to state 60


state 48

   21 comando_composto: T_BEGIN comando PONTO_E_VIRGULA . comando_composto_aux T_END

    $default  reduce using rule 20 (comando_composto_aux)

    comando_composto_aux  go to state 61


state 49

   76 identificador: IDENT .

    $default  reduce using rule 76 (identificador)


state 50

   29 atribuicao: @5 variavel . @6 ATRIBUICAO expressao

    $default  reduce using rule 28 (@6)

    @6  go to state 62


state 51

   74 variavel: identificador .

    $default  reduce using rule 74 (variavel)


state 52

   43 comando_condicional: @10 T_IF . expressao T_THEN @11 comando_composto @12 comando_condicional_else

    MAIS   shift, and go to state 56
    MENOS  shift, and go to state 57

    $default  reduce using rule 57 (mais_menos_epsilon)

    expressao           go to state 63
    mais_menos_epsilon  go to state 59
    expressao_simples   go to state 60


state 53

   30 leitura: READ ABRE_PARENTESES read_section . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 64


state 54

   33 read_section: @7 . variavel @8 read_section_lp

    IDENT  shift, and go to state 49

    variavel       go to state 65
    identificador  go to state 51


state 55

   37 escrita: WRITE @9 ABRE_PARENTESES . expressao FECHA_PARENTESES

    MAIS   shift, and go to state 56
    MENOS  shift, and go to state 57

    $default  reduce using rule 57 (mais_menos_epsilon)

    expressao           go to state 66
    mais_menos_epsilon  go to state 59
    expressao_simples   go to state 60


state 56

   55 mais_menos_epsilon: MAIS .

    $default  reduce using rule 55 (mais_menos_epsilon)


state 57

   56 mais_menos_epsilon: MENOS .

    $default  reduce using rule 56 (mais_menos_epsilon)


state 58

   46 comando_repetitivo: T_WHILE @13 expressao . @14 T_DO comando_composto

    $default  reduce using rule 45 (@14)

    @14  go to state 67


state 59

   62 expressao_simples: mais_menos_epsilon . termo

    ABRE_PARENTESES  shift, and go to state 68
    IDENT            shift, and go to state 49
    NUMERO           shift, and go to state 69
    TRUE             shift, and go to state 70
    FALSE            shift, and go to state 71
    T_NOT            shift, and go to state 72

    termo          go to state 73
    fator          go to state 74
    variavel       go to state 75
    numero         go to state 76
    identificador  go to state 51


state 60

   47 expressao: expressao_simples .
   48          | expressao_simples . relacao expressao_simples
   61 expressao_simples: expressao_simples . mais_menos_or termo

    IGUAL        shift, and go to state 77
    DIFERENTE    shift, and go to state 78
    MAIOR        shift, and go to state 79
    MENOR        shift, and go to state 80
    MAIOR_IGUAL  shift, and go to state 81
    MENOR_IGUAL  shift, and go to state 82
    MAIS         shift, and go to state 83
    MENOS        shift, and go to state 84
    T_OR         shift, and go to state 85

    $default  reduce using rule 47 (expressao)

    relacao        go to state 86
    mais_menos_or  go to state 87


state 61

   19 comando_composto_aux: comando_composto_aux . comando PONTO_E_VIRGULA
   21 comando_composto: T_BEGIN comando PONTO_E_VIRGULA comando_composto_aux . T_END

    T_END    shift, and go to state 88
    READ     shift, and go to state 34
    WRITE    shift, and go to state 35
    T_WHILE  shift, and go to state 36

    T_IF      reduce using rule 40 (@10)
    $default  reduce using rule 27 (@5)

    comando              go to state 89
    atribuicao           go to state 38
    @5                   go to state 39
    leitura              go to state 40
    escrita              go to state 41
    comando_condicional  go to state 42
    @10                  go to state 43
    comando_repetitivo   go to state 44


state 62

   29 atribuicao: @5 variavel @6 . ATRIBUICAO expressao

    ATRIBUICAO  shift, and go to state 90


state 63

   43 comando_condicional: @10 T_IF expressao . T_THEN @11 comando_composto @12 comando_condicional_else

    T_THEN  shift, and go to state 91


state 64

   30 leitura: READ ABRE_PARENTESES read_section FECHA_PARENTESES .

    $default  reduce using rule 30 (leitura)


state 65

   33 read_section: @7 variavel . @8 read_section_lp

    $default  reduce using rule 32 (@8)

    @8  go to state 92


state 66

   37 escrita: WRITE @9 ABRE_PARENTESES expressao . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 93


state 67

   46 comando_repetitivo: T_WHILE @13 expressao @14 . T_DO comando_composto

    T_DO  shift, and go to state 94


state 68

   72 fator: ABRE_PARENTESES . expressao FECHA_PARENTESES

    MAIS   shift, and go to state 56
    MENOS  shift, and go to state 57

    $default  reduce using rule 57 (mais_menos_epsilon)

    expressao           go to state 95
    mais_menos_epsilon  go to state 59
    expressao_simples   go to state 60


state 69

   75 numero: NUMERO .

    $default  reduce using rule 75 (numero)


state 70

   70 fator: TRUE .

    $default  reduce using rule 70 (fator)


state 71

   71 fator: FALSE .

    $default  reduce using rule 71 (fator)


state 72

   73 fator: T_NOT . fator

    ABRE_PARENTESES  shift, and go to state 68
    IDENT            shift, and go to state 49
    NUMERO           shift, and go to state 69
    TRUE             shift, and go to state 70
    FALSE            shift, and go to state 71
    T_NOT            shift, and go to state 72

    fator          go to state 96
    variavel       go to state 75
    numero         go to state 76
    identificador  go to state 51


state 73

   62 expressao_simples: mais_menos_epsilon termo .
   66 termo: termo . mult_div_and fator

    MULTIPLICACAO  shift, and go to state 97
    T_DIV          shift, and go to state 98
    T_AND          shift, and go to state 99

    $default  reduce using rule 62 (expressao_simples)

    mult_div_and  go to state 100


state 74

   67 termo: fator .

    $default  reduce using rule 67 (termo)


state 75

   68 fator: variavel .

    $default  reduce using rule 68 (fator)


state 76

   69 fator: numero .

    $default  reduce using rule 69 (fator)


state 77

   49 relacao: IGUAL .

    $default  reduce using rule 49 (relacao)


state 78

   50 relacao: DIFERENTE .

    $default  reduce using rule 50 (relacao)


state 79

   54 relacao: MAIOR .

    $default  reduce using rule 54 (relacao)


state 80

   51 relacao: MENOR .

    $default  reduce using rule 51 (relacao)


state 81

   53 relacao: MAIOR_IGUAL .

    $default  reduce using rule 53 (relacao)


state 82

   52 relacao: MENOR_IGUAL .

    $default  reduce using rule 52 (relacao)


state 83

   58 mais_menos_or: MAIS .

    $default  reduce using rule 58 (mais_menos_or)


state 84

   59 mais_menos_or: MENOS .

    $default  reduce using rule 59 (mais_menos_or)


state 85

   60 mais_menos_or: T_OR .

    $default  reduce using rule 60 (mais_menos_or)


state 86

   48 expressao: expressao_simples relacao . expressao_simples

    MAIS   shift, and go to state 56
    MENOS  shift, and go to state 57

    $default  reduce using rule 57 (mais_menos_epsilon)

    mais_menos_epsilon  go to state 59
    expressao_simples   go to state 101


state 87

   61 expressao_simples: expressao_simples mais_menos_or . termo

    ABRE_PARENTESES  shift, and go to state 68
    IDENT            shift, and go to state 49
    NUMERO           shift, and go to state 69
    TRUE             shift, and go to state 70
    FALSE            shift, and go to state 71
    T_NOT            shift, and go to state 72

    termo          go to state 102
    fator          go to state 74
    variavel       go to state 75
    numero         go to state 76
    identificador  go to state 51


state 88

   21 comando_composto: T_BEGIN comando PONTO_E_VIRGULA comando_composto_aux T_END .

    $default  reduce using rule 21 (comando_composto)


state 89

   19 comando_composto_aux: comando_composto_aux comando . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 103


state 90

   29 atribuicao: @5 variavel @6 ATRIBUICAO . expressao

    MAIS   shift, and go to state 56
    MENOS  shift, and go to state 57

    $default  reduce using rule 57 (mais_menos_epsilon)

    expressao           go to state 104
    mais_menos_epsilon  go to state 59
    expressao_simples   go to state 60


state 91

   43 comando_condicional: @10 T_IF expressao T_THEN . @11 comando_composto @12 comando_condicional_else

    $default  reduce using rule 41 (@11)

    @11  go to state 105


state 92

   33 read_section: @7 variavel @8 . read_section_lp

    VIRGULA  shift, and go to state 106

    $default  reduce using rule 34 (read_section_lp)

    read_section_lp  go to state 107


state 93

   37 escrita: WRITE @9 ABRE_PARENTESES expressao FECHA_PARENTESES .

    $default  reduce using rule 37 (escrita)


state 94

   46 comando_repetitivo: T_WHILE @13 expressao @14 T_DO . comando_composto

    T_BEGIN  shift, and go to state 27

    comando_composto  go to state 108


state 95

   72 fator: ABRE_PARENTESES expressao . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 109


state 96

   73 fator: T_NOT fator .

    $default  reduce using rule 73 (fator)


state 97

   63 mult_div_and: MULTIPLICACAO .

    $default  reduce using rule 63 (mult_div_and)


state 98

   64 mult_div_and: T_DIV .

    $default  reduce using rule 64 (mult_div_and)


state 99

   65 mult_div_and: T_AND .

    $default  reduce using rule 65 (mult_div_and)


state 100

   66 termo: termo mult_div_and . fator

    ABRE_PARENTESES  shift, and go to state 68
    IDENT            shift, and go to state 49
    NUMERO           shift, and go to state 69
    TRUE             shift, and go to state 70
    FALSE            shift, and go to state 71
    T_NOT            shift, and go to state 72

    fator          go to state 110
    variavel       go to state 75
    numero         go to state 76
    identificador  go to state 51


state 101

   48 expressao: expressao_simples relacao expressao_simples .
   61 expressao_simples: expressao_simples . mais_menos_or termo

    MAIS   shift, and go to state 83
    MENOS  shift, and go to state 84
    T_OR   shift, and go to state 85

    $default  reduce using rule 48 (expressao)

    mais_menos_or  go to state 87


state 102

   61 expressao_simples: expressao_simples mais_menos_or termo .
   66 termo: termo . mult_div_and fator

    MULTIPLICACAO  shift, and go to state 97
    T_DIV          shift, and go to state 98
    T_AND          shift, and go to state 99

    $default  reduce using rule 61 (expressao_simples)

    mult_div_and  go to state 100


state 103

   19 comando_composto_aux: comando_composto_aux comando PONTO_E_VIRGULA .

    $default  reduce using rule 19 (comando_composto_aux)


state 104

   29 atribuicao: @5 variavel @6 ATRIBUICAO expressao .

    $default  reduce using rule 29 (atribuicao)


state 105

   43 comando_condicional: @10 T_IF expressao T_THEN @11 . comando_composto @12 comando_condicional_else

    T_BEGIN  shift, and go to state 27

    comando_composto  go to state 111


state 106

   35 read_section_lp: VIRGULA . read_section

    $default  reduce using rule 31 (@7)

    read_section  go to state 112
    @7            go to state 54


state 107

   33 read_section: @7 variavel @8 read_section_lp .

    $default  reduce using rule 33 (read_section)


state 108

   46 comando_repetitivo: T_WHILE @13 expressao @14 T_DO comando_composto .

    $default  reduce using rule 46 (comando_repetitivo)


state 109

   72 fator: ABRE_PARENTESES expressao FECHA_PARENTESES .

    $default  reduce using rule 72 (fator)


state 110

   66 termo: termo mult_div_and fator .

    $default  reduce using rule 66 (termo)


state 111

   43 comando_condicional: @10 T_IF expressao T_THEN @11 comando_composto . @12 comando_condicional_else

    $default  reduce using rule 42 (@12)

    @12  go to state 113


state 112

   35 read_section_lp: VIRGULA read_section .

    $default  reduce using rule 35 (read_section_lp)


state 113

   43 comando_condicional: @10 T_IF expressao T_THEN @11 comando_composto @12 . comando_condicional_else

    T_ELSE  shift, and go to state 114

    $default  reduce using rule 38 (comando_condicional_else)

    comando_condicional_else  go to state 115


state 114

   39 comando_condicional_else: T_ELSE . comando_composto

    T_BEGIN  shift, and go to state 27

    comando_composto  go to state 116


state 115

   43 comando_condicional: @10 T_IF expressao T_THEN @11 comando_composto @12 comando_condicional_else .

    $default  reduce using rule 43 (comando_condicional)


state 116

   39 comando_condicional_else: T_ELSE comando_composto .

    $default  reduce using rule 39 (comando_condicional_else)
